vcs/specs/parser/success/ffi/extern_blocks.vr
// @test: parse
// @level: L0
// @tags: parser, ffi, extern
// @description: Test extern block parsing

// Basic extern block
extern "C" {
    fn malloc(size: usize) -> *mut u8;
    fn free(ptr: *mut u8);
    fn memcpy(dest: *mut u8, src: *const u8, n: usize) -> *mut u8;
}

// Extern block with default ABI
extern {
    fn custom_function(x: Int) -> Int;
}

// Extern with visibility
extern "C" {
    pub fn public_extern();
    internal fn internal_extern();
}

// Extern with generics
extern "C" {
    fn generic_extern<T>(ptr: *const T) -> T;
}

// Extern with complex types
extern "C" {
    fn complex_extern(
        callback: fn(*const u8) -> Int,
        data: *mut u8,
        len: usize
    ) -> Int;
}

// Multiple ABIs
extern "C" {
    fn c_func();
}

extern "stdcall" {
    fn windows_func();
}

extern "fastcall" {
    fn fast_func();
}
