vcs/specs/parser/fail/ffi/unclosed_extern.vr
// @test: parse-fail
// @level: L0
// @tags: parser, ffi, extern, unclosed, error
// @description: Test unclosed extern block
// @expected-error: E018

extern "C" {
    fn malloc(size: Int) -> &unsafe Byte;
